--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<meta http-equiv="refresh" content="0" url="http://username.github.io/repositoryname/folder/work.html" />
+---
+# Feel free to add content and custom Front Matter to this file.
+# To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
+
+layout: home
+title: Home
+banner: "assets/images/banners/home.jpeg"
+---
